fix route and doc swagger
