# docs/swagger.json
@@ -1,19 +1,24 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Service to manage MyGram data",
-        "title": "My Gram API",
-        "termsOfService": "https://google.com",
+        "description": "This is a sample server celler server.",
+        "title": "Swagger MyGram API",
+        "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
-            "email": "admin@mail.me"
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
         "version": "1.0"
     },
     "host": "localhost:8000",
-    "basePath": "/",
+    "basePath": "/api/v1",
     "paths": {
-        "/api/v1/auth/login": {
+        "/auth/login": {
             "post": {
                 "description": "Login User",
                 "consumes": [
@@ -47,7 +52,7 @@
                 }
             }
         },
-        "/api/v1/auth/register": {
+        "/auth/register": {
             "post": {
                 "description": "Register new User",
                 "consumes": [
@@ -81,9 +86,9 @@
                 }
             }
         },
-        "/api/v1/social-media": {
+        "/social-media": {
             "get": {
-                "description": "Get All new SocialMedia",
+                "description": "Get All Social Media",
                 "consumes": [
                     "application/json"
                 ],
@@ -93,24 +98,26 @@
                 "tags": [
                     "Social Media"
                 ],
-                "summary": "Get All SocialMedia",
+                "summary": "GetAll",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "Pagination Get All Social Media",
                         "name": "page",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "integer",
                         "description": "Pagination Get All Social Media",
                         "name": "limit",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.SocialMediaListRes"
                         }
@@ -118,7 +125,7 @@
                 }
             },
             "post": {
-                "description": "Create new SocialMedia",
+                "description": "Create new data Social Media",
                 "consumes": [
                     "application/json"
                 ],
@@ -150,9 +157,39 @@
                 }
             }
         },
-        "/api/v1/social-media/{id}": {
+        "/social-media/{id}": {
+            "get": {
+                "description": "GetOne Social Media by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Social Media"
+                ],
+                "summary": "GetOne",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Social Media ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.SocialMedia"
+                        }
+                    }
+                }
+            },
             "put": {
-                "description": "Update  SocialMedia",
+                "description": "Update Social Media by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -191,7 +228,7 @@
                 }
             },
             "delete": {
-                "description": "Delete SocialMedia by ID",
+                "description": "Delete Social Media by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -216,38 +253,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/helpers.ResponseDefault"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/social-media/{{id}}": {
-            "get": {
-                "description": "GetOne SocialMedia",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Social Media"
-                ],
-                "summary": "GetOne SocialMedia",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Social Media ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/entity.SocialMedia"
                         }
                     }
                 }
